# transformer-pytorch

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml
model/: attention.py  decoder.py  embeddings.py  encoder.py  main.py  misc.py  transformer.py  utils.py
tests/: test_inference.py
transformer/: main.py
