[tool.poetry]
name = "transformer-pytorch"
version = "0.1.0"
description = "Transformer model implemented in PyTorch"
authors = ["Marcin Dąmbski <19229917+mdambski@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "ruff"
ruff = "^0.7.4"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
