[tool.poetry]
name = "transformer-pytorch"
version = "0.1.0"
description = "Transformer model implemented in PyTorch"
authors = ["Marcin Dąmbski <name.surname[at]gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
exclude = ["tests"]

warn_unused_configs = "True"
disallow_any_generics = "True"
disallow_subclassing_any = "True"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
disallow_incomplete_defs = "True"
check_untyped_defs = "True"
disallow_untyped_decorators = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
warn_return_any = "False"
no_implicit_reexport = "True"
strict_equality = "True"
extra_checks = "True"
